// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Divider > should render 1`] = `
<DocumentFragment>
  <div
    class="flex clear-both my-4 w-full min-w-full border-t border-solid border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</DocumentFragment>
`;

exports[`Divider > should render a dashed 1`] = `
<div>
  <div
    class="flex clear-both my-4 w-full min-w-full border-t border-dashed [background:none] border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render horizontal type 1`] = `
<div>
  <div
    class="flex clear-both my-4 w-full min-w-full border-t border-solid border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render horizontal with size default 1`] = `
<div>
  <div
    class="flex clear-both my-4 w-full min-w-full border-t border-solid border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render horizontal with size lg 1`] = `
<div>
  <div
    class="flex clear-both my-4 w-full min-w-full border-t border-solid border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render horizontal with size md 1`] = `
<div>
  <div
    class="flex clear-both my-4 w-full min-w-full border-t border-solid border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render horizontal with size sm 1`] = `
<div>
  <div
    class="flex clear-both my-4 w-full min-w-full border-t border-solid border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render horizontal with size xl 1`] = `
<div>
  <div
    class="flex clear-both my-4 w-full min-w-full border-t border-solid border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render vertical type 1`] = `
<div>
  <div
    class="inline-block relative mx-2 h-4 align-middle border-t-0 border-l border-solid border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render vertical with size default 1`] = `
<div>
  <div
    class="inline-block relative mx-2 h-4 align-middle border-t-0 border-l border-solid border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render vertical with size lg 1`] = `
<div>
  <div
    class="inline-block relative mx-2 h-8 align-middle border-t-0 border-l border-solid border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render vertical with size md 1`] = `
<div>
  <div
    class="inline-block relative mx-2 h-5 align-middle border-t-0 border-l border-solid border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render vertical with size sm 1`] = `
<div>
  <div
    class="inline-block relative mx-2 h-2 align-middle border-t-0 border-l border-solid border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render vertical with size xl 1`] = `
<div>
  <div
    class="inline-block relative mx-2 h-10 align-middle border-t-0 border-l border-solid border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;
